--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atlas-classes",
+  "name": "atlas-classes-(final)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,7 +13,8 @@
     "react": "^19.2.0",
     "react-router-dom": "^7.9.5",
     "recharts": "^3.3.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "axios": "^1.13.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
