--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^7.9.5",
     "recharts": "^3.3.0",
     "react-dom": "^19.2.0",
-    "axios": "^1.13.2"
+    "axios": "^1.13.2",
+    "@supabase/supabase-js": "^2.89.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
