--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "recharts": "^3.3.0",
     "react-dom": "^19.2.0",
     "axios": "^1.13.2",
-    "@supabase/supabase-js": "^2.89.0"
+    "@supabase/supabase-js": "^2.89.0",
+    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
